--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,10 @@ dependencies:
   flutter_carousel_widget: ^2.2.0
   animated_text_kit: ^4.2.2
   flutter_custom_cards: ^0.2.1
-
+  firebase_auth: ^4.16.0
+  cloud_firestore: ^4.14.0
+  date_time_format: ^2.0.1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
