--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,11 +45,12 @@ android {
         applicationId "com.example.acm_website"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 21
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         multiDexEnabled true
+        compileSdkVersion 34
     }
 
     buildTypes {
@@ -65,6 +66,4 @@ flutter {
     source '../..'
 }
 
-dependencies {
-    implementation 'com.android.support.multidex:1.0.3'
-}
+dependencies {}
