--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_auth: ^4.16.0
   cloud_firestore: ^4.14.0
   date_time_format: ^2.0.1
+  url_launcher: ^6.2.4
   
 dev_dependencies:
   flutter_test:
